--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="form.css" media="screen">
     <title>Cadastro</title>
+
+    <script src="dados.js"> 
+    </script>
+
 </head>
 <body>
 
@@ -14,7 +18,7 @@
         <br>
     </div>
 
-    <form>
+    <form id="form">
         <fieldset class="grupo">
             <div class="campo">
                 <label> <strong>Nome</strong></label>
@@ -81,13 +85,13 @@
             </div>
         </fieldset>
 
-        <div class="campo">
+        <div class="campo" id="xp">
             <br>
             <label><strong>Conte um pouco sobre sua experiência</strong></label>
             <textarea name="experiencia" id="experiencia" rows="6" style="width: 26em"></textarea>
         </div>
 
-        <button class="button" type="submit">Enviar</button>
+        <button class="button" type="submit">Enviar</button> 
 
     </form>
 
